--- a/src/main/resources/templates/casEsupNfcCodeView.html
+++ b/src/main/resources/templates/casEsupNfcCodeView.html
@@ -2,43 +2,79 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
 
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <title th:text="#{cas.mfa.simple.pagetitle}">CAS Multifactor Authentication View</title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
 </head>
 
 <body>
-<main role="main" class="container mt-3 mb-3">
-    <div layout:fragment="content" id="login">
-        <form method="post" id="fm1" class="fm-v clearfix" th:object="${credential}" th:action="@{/login}" th:classappend="${autologin ? 'd-none' : ''}">
-            <div id="msg" class="errors" th:if="${#fields.hasErrors('*')}">
-                <span th:each="err : ${#fields.errors('*')}" th:utext="${err}"/>
-            </div>
+    <main role="main" class="container mt-3 mb-3">
+        <div layout:fragment="content" id="login" class="mdc-card mdc-card-content w-lg-50 p-4 m-auto">
+            <form method="post" id="fm1" th:object="${credential}" th:action="@{/login}" th:classappend="${autologin ? 'd-none' : ''}">
 
-            <div class="form-group">
-                <label for="token" class="fl-label" th:utext="#{esup.nfc.cas.mfa.label.token}">Token:</label>
-                <input type="password" class="form-control required" id="token" size="25" tabindex="1"
-                       th:field="*{token}"
-                       th:accesskey="#{screen.welcome.label.password.accesskey}" autocomplete="off"/>
-                <div>
-                    <p/>
+                <div class="banner banner-danger my-2" th:if="${flowRequestContext.messageContext.hasErrorMessages()}">
+                    <p th:each="message : ${flowRequestContext.messageContext.allMessages}"
+                        th:utext="#{${message.text}}">Message Text</p>
                 </div>
-            </div>
-            <input class="btn btn-submit" accesskey="l"
-                   th:value="#{screen.welcome.button.login}" tabindex="4" type="submit"/>
-            <input type="hidden" name="_eventId_submit" value="Login" />
-            <input type="hidden" name="execution" th:value="${flowExecutionKey}"/>
-            <input type="hidden" name="geolocation"/>
-        </form>
-        
-        <div class="form-group" th:classappend="${autologin ? '' : 'd-none'}">
-			<h3 th:utext="#{esup.nfc.cas.mfa.label.autologin}">Please swipe your tag</h3>
-				<div class="progress">
-				  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+
+                <div class="banner banner-info my-2"
+                    th:unless="${flowRequestContext.messageContext.hasErrorMessages()}">
+                    <p th:each="message : ${flowRequestContext.messageContext.allMessages}"
+                        th:utext="#{${message.text}}">Message Text</p>
+                </div>
+
+                <section class="cas-field my-3 mdc-input-group">
+                    <div class="mdc-input-group-field mdc-input-group-field-append">
+                        <div
+                            class="mdc-text-field  mdc-text-field--with-trailing-icon d-flex caps-check">
+                            <input class="mdc-text-field__input pwd" type="password" required id="token" size="25"
+                                th:field="*{token}" th:accesskey="#{screen.welcome.label.password.accesskey}"
+                                autocomplete="off"/>
+                            <label for="token" class="mdc-floating-label" th:utext="#{esup.nfc.cas.mfa.label.token}">Token</label>
+                        </div>
+                        <div class="mdc-text-field-helper-line caps-warn">
+                            <p
+                                class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg text-danger">
+                                <span th:utext="#{screen.capslock.on}" />
+                            </p>
+                        </div>
+                    </div>
+                    <button class="reveal-password mdc-button mdc-button--raised mdc-input-group-append mdc-icon-button"
+                        type="button">
+                        <i class="mdi mdi-eye reveal-password-icon"></i>
+                        <span class="sr-only">Toggle Password</span>
+                    </button>
+                </section>
+                <div class="d-flex">
+                    <button class="mdc-button mdc-button--raised mr-2" accesskey="s">
+                        <span class="mdc-button__label" th:text="#{screen.welcome.button.login}">Login</span>
+                    </button>
+                </div>
+				<input type="hidden" id="eventId" name="_eventId" value="submit" />
+                <input type="hidden" name="execution" th:value="${flowExecutionKey}" />
+                <input type="hidden" name="geolocation" />
+            </form>
+            
+            <section th:classappend="${autologin ? '' : 'd-none'}">
+           		 <div class="demo-linear-progress-indicator">
+					<h3 class="mdc-typography--subtitle1" th:utext="#{esup.nfc.cas.mfa.label.autologin}">Please swipe your tag</h3>
+					<div role="progressbar"
+						class="mdc-linear-progress mdc-linear-progress--indeterminate">
+						<div class="mdc-linear-progress__buffering-dots"></div>
+						<div class="mdc-linear-progress__buffer"></div>
+						<div
+							class="mdc-linear-progress__bar mdc-linear-progress__primary-bar">
+							<span class="mdc-linear-progress__bar-inner"></span>
+						</div>
+						<div
+							class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar">
+							<span class="mdc-linear-progress__bar-inner"></span>
+						</div>
+					</div>
 				</div>
-        </div>
+            </section>
             
             <script type="text/javascript" th:if="${autologin}">
             
@@ -105,6 +141,8 @@
             
         
         </div> 
-</main>
+        
+    </main>
 </body>
+
 </html>
